--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -11,36 +11,36 @@ jobs:
     steps:
 
     - name: Set up Go
-      uses: actions/setup-go@v5.5.0
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
       with:
         fetch-depth: 0
 
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@v6.5.0
+      uses: golangci/golangci-lint-action@v8
       with:
-        version: v1.44
+        version: v2.5
 
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
 
-    - name: Setup Go
-      uses: actions/setup-go@v5.5.0
+    - name: Set up Go
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
       with:
-        ref: "refs/pull/${{ github.event.number }}/merge"
+        fetch-depth: 0
 
     - name: Test
       run: go test -coverprofile cover.out ./...
@@ -55,35 +55,33 @@ jobs:
     name: Image Scan
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        ref: "refs/pull/${{ github.event.number }}/merge"
-
     - name: Setup Go
-      uses: actions/setup-go@v5.5.0
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
-    - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v4.3.0
+    - name: Checkout
+      uses: actions/checkout@v5
       with:
-        version: latest
-        args: release --rm-dist --snapshot
+        fetch-depth: 0
+
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v6
+      with:
+        version: '~> v2'
+        args: release --clean --snapshot
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Scan image
-      uses: anchore/scan-action@v6.5.0
+      uses: anchore/scan-action@v7
       id: scan
       with:
         image: "hipages/php-fpm_exporter:latest"
-        acs-report-enable: true
         fail-build: false
 
     - name: Upload Anchore scan SARIF report
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
