--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -14,34 +14,32 @@ jobs:
     steps:
 
     - name: Set up Go
-      uses: actions/setup-go@v5.5.0
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
     - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@v5
 
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@v6.5.0
+      uses: golangci/golangci-lint-action@v8
       with:
-        version: v1.44
+        version: v2.5
 
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
 
-    - name: Setup Go
-      uses: actions/setup-go@v5.5.0
+    - name: Set up Go
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
 
     - name: Test
       run: go test -coverprofile cover.out ./...
@@ -56,27 +54,25 @@ jobs:
     name: Image Scan
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
     - name: Setup Go
-      uses: actions/setup-go@v5.5.0
+      uses: actions/setup-go@v6
       with:
-        go-version: 1.17
+        go-version: '1.25'
       id: go
 
+    - name: Checkout
+      uses: actions/checkout@v5
+
     - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v4.3.0
+      uses: goreleaser/goreleaser-action@v6
       with:
-        version: latest
-        args: release --rm-dist --snapshot
+        version: '~> v2'
+        args: release --clean --snapshot
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Scan image
-      uses: anchore/scan-action@v6.5.0
+      uses: anchore/scan-action@v7
       id: scan
       with:
         image: "hipages/php-fpm_exporter:latest"
@@ -84,6 +80,6 @@ jobs:
         fail-build: false
 
     - name: Upload Anchore scan SARIF report
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
