--- a/.github/workflows/github-pipeline.yml
+++ b/.github/workflows/github-pipeline.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run unit tests with coverage
         run: |
-          go test -v -race -coverprofile=coverage.out -covermode=atomic ./pkg/... ./internal/... ./cmd/...
+          go test -v -race -coverprofile=coverage.out -covermode=atomic ./phpfpm/... ./cmd/...
           go tool cover -html=coverage.out -o coverage.html
 
       - name: Upload coverage reports to Codecov
