--- a/.github/workflows/github-pipeline.yml
+++ b/.github/workflows/github-pipeline.yml
@@ -70,31 +70,31 @@ jobs:
           version: latest
           args: --config .golangci.yml
 
-  integration-tests:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    needs: [unit-tests, linting]
-    steps:
-      - uses: actions/checkout@v5
+  #integration-tests:
+  #  name: Integration Tests
+  #  runs-on: ubuntu-latest
+  #  needs: [unit-tests, linting]
+  #  steps:
+  #    - uses: actions/checkout@v5
 
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: "stable"
+  #    - name: Set up Go
+  #      uses: actions/setup-go@v6
+  #      with:
+  #        go-version: "stable"
 
-      - name: Build Binary
-        run: |
-          make build
+  #    - name: Build Binary
+  #      run: |
+  #        make build
 
-      - name: Run Integration Tests
-        run: |
-          # For integration tests, we just run them without coverage since they test the binary via HTTP
-          go test -v -tags=integration -race ./tests/integration/...
+  #    - name: Run Integration Tests
+  #      run: |
+  #        # For integration tests, we just run them without coverage since they test the binary via HTTP
+  #        go test -v -tags=integration -race ./tests/integration/...
 
   docker-build:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: [unit-tests, linting, integration-tests]
+    needs: [unit-tests, linting]
     # Only build Docker images for the branches and tags specified above, not for PRs
     if: github.event_name != 'pull_request'
     permissions:
